testdata/baselines/reference/submodule/conformance/jsDeclarationsClassExtendsVisibility.errors.txt
cls.js(6,19): error TS8010: Type annotations can only be used in TypeScript files.
cls.js(7,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
cls.js(8,16): error TS2339: Property 'Strings' does not exist on type 'typeof Foo'.


==== cls.js (3 errors) ====
    const Bar = require("./bar");
    const Strings = {
        a: "A",
        b: "B"
    };
    class Foo extends Bar {}
                      ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    module.exports = Foo;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.Strings = Strings;
                   ~~~~~~~
!!! error TS2339: Property 'Strings' does not exist on type 'typeof Foo'.
==== bar.js (0 errors) ====
    class Bar {}
    module.exports = Bar;